tests/spec/emit/snapshots/function_with_parameters.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn add(a: int, b: int) {
    let sum = a + b;
  }
---
package main

func add(a, b int) {
	_ = a + b
}
