tests/spec/emit/snapshots/function_with_params_and_return.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn add(a: int, b: int) -> int {
    a + b
  }
---
package main

func add(a, b int) int {
	return a + b
}
