tests/spec/emit/snapshots/function_with_return_type.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn get_value() -> int {
    42
  }
---
package main

func getValue() int {
	return 42
}
