tests/spec/emit/snapshots/function_with_unused_destructured_param.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn foo((a, b): (int, int)) -> int {
    1
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func foo(arg lisette.Tuple2[int, int]) int {
	return 1
}
