tests/spec/emit/snapshots/fused_bare_error_match_binds_unit_payload.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:os"
  import "go:fmt"
  
  fn test() {
    match os.Remove("f") {
      Ok(x) => { fmt.Println(x) },
      Err(e) => { fmt.Println(e) },
    }
  }
---
package main

import (
	"fmt"
	"os"
)

func test() {
	if e := os.Remove("f"); e == nil {
		x := struct{}{}
		fmt.Println(x)
	} else {
		fmt.Println(e)
	}
}
