tests/spec/emit/snapshots/fused_go_interface_result_match_uses_nil_interface_guard.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:net"
  import "go:fmt"
  
  fn test() {
    match net.Dial("tcp", "addr") {
      Ok(conn) => { let _ = conn },
      Err(e) => fmt.Println(e),
    }
  }
---
package main

import (
	"errors"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"net"
)

func test() {
	ret_1, e := net.Dial("tcp", "addr")
	if e == nil && !lisette.IsNilInterface(ret_1) {
		conn := ret_1
		_ = conn
	} else {
		if e == nil {
			e = errors.New("unexpected nil")
		}
		fmt.Println(e)
	}
}
