tests/spec/emit/snapshots/fused_go_pointer_result_match_unused_err.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:os"
  import "go:fmt"
  
  fn test() {
    let file = match os.Create("f") {
      Ok(f) => f,
      Err(e) => {
        fmt.Println("error")
        return
      },
    }
    defer file.Close()
  }
---
package main

import (
	"fmt"
	"os"
)

func test() {
	file, err := os.Create("f")
	if err != nil || file == nil {
		fmt.Println("error")
		return
	}
	defer file.Close()
}
