tests/spec/emit/snapshots/fused_go_result_if_let_err.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:os"
  
  fn test(name: string) -> string {
    if let Err(e) = os.Stat(name) {
      return name
    }
    "found"
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"os"
)

func test(name string) string {
	if ret, err := os.Stat(name); err != nil || lisette.IsNilInterface(ret) {
		return name
	}
	return "found"
}
