tests/spec/emit/snapshots/fused_go_result_if_let_err_on_pointer_return.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:os"
  
  fn test(name: string) -> bool {
    if let Err(e) = os.Open(name) {
      return false
    }
    true
  }
---
package main

import "os"

func test(name string) bool {
	if ret, err := os.Open(name); err != nil || ret == nil {
		return false
	}
	return true
}
