tests/spec/emit/snapshots/fused_go_result_if_let_err_reads_payload.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:os"
  import "go:fmt"
  
  fn test(name: string) {
    if let Err(e) = os.Stat(name) {
      fmt.Println(e)
    }
  }
---
package main

import (
	"errors"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"os"
)

func test(name string) {
	if ret, e := os.Stat(name); e != nil || lisette.IsNilInterface(ret) {
		if e == nil {
			e = errors.New("unexpected nil")
		}
		fmt.Println(e)
	}
}
